--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,9 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# My stuff
+#  This is a personal collection of files that I don't want to see in my git status.
+.vscode/
+https___communisme_ch/
+website_pdfs/
